--- a/src/app/modules/config/general/views/general-config/config.component.html
+++ b/src/app/modules/config/general/views/general-config/config.component.html
@@ -1,3 +1,4 @@
+<with-loader [loader]="configLoader">
 <ul class="nav nav-tabs">
     <li class="nav-item">
         <a class="nav-link active" data-bs-toggle="tab" href="#iva">IVA</a>
@@ -16,7 +17,7 @@
                     <div class="row">
                         <div class="col-12 col-md-6">
                             <label for="iva" class="form-label">Iva %</label>
-                            <input type="number" name="iva" id="iva" min="0" max="50" value="12" class="form-control" [(ngModel)]="formData.iva" required>
+                            <input type="number" name="iva" min="0" max="50" value="12" class="form-control" [(ngModel)]="formData.iva" required>
                         </div>
                         <div class="col-12 col-md-6">
                             <label for="decimals" class="form-label"># Decimales</label>
@@ -38,19 +39,25 @@
     <!-- Firma electronica -->
     <div class="tab-pane" id="factElect">
         <div class="row g-0 rounded">
-            <form class="card" #formGeneralConfig (ngSubmit)="onSubmit(false)" ngNativeValidate>
+            <form class="card" #formGeneralConfig (ngSubmit)="onSubmit(false)">
                 <div class="card-body">
                     <label class="label-title d-block">Entorno</label>
                     <div class="row g-2">
                         <div class="div col-6 col-md-4">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" [checked]="this.env_prod_flag" checked (change)="onCheckTest($event.target.checked)">
+                                <input class="form-check-input" type="radio"
+                                       name="exampleRadios" id="exampleRadios1"
+                                       (change)="onCheckEnv(1)"
+                                       [checked]="this.formData.cfdi_env != 2">
                                 <label class="form-check-label" for="exampleRadios1">
                                   PRUEBAS
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" [checked]="!this.env_prod_flag" (change)="onCheckTest(!$event.target.checked)">
+                                <input class="form-check-input" type="radio" name="exampleRadios"
+                                       id="exampleRadios2" value="option2"
+                                       (change)="onCheckEnv(2)"
+                                       [checked]="this.formData.cfdi_env == 2">
                                 <label class="form-check-label" for="exampleRadios2">
                                   PRODUCCIÓN
                                 </label>
@@ -61,28 +68,38 @@
                     <div class="row g-2">
                         <div class="div col-6 col-md-6">
                             <label for="sign" class="form-label">Firma electrónica en formato p12</label>
-                            <input type="file" accept=".p12" name="sign" id="sign" class="form-control" (change)="onSelectFile($event)">
+                            <input type="file" accept=".p12" name="sign" id="sign" class="form-control"
+                                   (change)="onSelectFile($event)">
+                            <small class="text-muted" *ngIf="formData.cfdi_has_sign">
+                              Configurada: <code class="fw-bold">{{ formData.cfdi_sign_name }}</code></small>
                         </div>
-                        <div class="div col-6 col-md-6">
-                            <label for="cfdi_sign_expire" class="form-label">Fecha de expiración de la firma:</label>
-                            <input type="date" name="cfdi_sign_expire" id="cfdi_sign_expire" class="form-control" [(ngModel)]="formData.cfdi_sign_expire" required>
+                      <div class="div col-6 col-md-6">
+                        <label for="cfdi_sign_pw" class="form-label">Clave de firma electrónica</label>
+                        <input [type]="type" name="cfdi_sign_pw" id="cfdi_sign_pw" [(ngModel)]="formData.cfdi_sign_pw"
+                               value="formData.cfdi_sign_pw" class="form-control">
+                        <div class="form-check">
+
+                          <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" (change)="onChangeCheck($event)">
+                            Mostrar contraseña
+                          </label>
                         </div>
+                      </div>
+
                     </div>
                     <div class="row g-2">
                         <div class="div col-6 col-md-6">
-                            <label for="cfdi_business_key" class="form-label">Clave empresarial</label>
-                            <input type="text" name="cfdi_business_key" id="cfdi_business_key" maxlength="8" minlength="8" value="formData.cfdi_business_key" [(ngModel)]="formData.cfdi_business_key" class="form-control" required>
+                            <label for="cfdi_business_key" class="form-label">Clave empresarial (8 dígitos)</label>
+                            <input type="text" name="cfdi_business_key" id="cfdi_business_key" maxlength="8"
+                                   minlength="8" value="formData.cfdi_business_key"
+                                   [(ngModel)]="formData.cfdi_business_key" class="form-control" required>
                         </div>
-                        <div class="div col-6 col-md-6">
-                            <label for="cfdi_sign_pw" class="form-label">Clave de firma electrónica</label>
-                            <input [type]="type" name="cfdi_sign_pw" id="cfdi_sign_pw" [(ngModel)]="formData.cfdi_sign_pw" value="formData.cfdi_sign_pw" class="form-control">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" (change)="onChangeCheck($event.target.checked)">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Mostrar contraseña
-                                </label>
-                            </div>
-                        </div>
+                      <div class="div col-6 col-md-6">
+                        <label for="cfdi_sign_expire" class="form-label">Fecha de expiración de la firma:</label>
+                        <input type="date" name="cfdi_sign_expire" id="cfdi_sign_expire"
+                               class="form-control"
+                               [(ngModel)]="formData.cfdi_sign_expire" required>
+                      </div>
                     </div>
                     <div class="row g-2">
                         <div class="div col-6 col-md-6">
@@ -96,14 +113,17 @@
 
                         <div class="div col-6 col-md-6">
                             <label for="cdfi_wait" class="form-label">Segundos (Tiempo de espera SRI):</label>
-                            <input type="number" name="cdfi_wait" id="cdfi_wait" class="form-control" [(ngModel)]="formData.cdfi_wait" value="formData.cdfi_wait" min="3">
+                            <input type="number" name="cdfi_wait" id="cdfi_wait" class="form-control" [(ngModel)]="formData.cfdi_wait" value="formData.cdfi_wait" min="3">
                         </div>
                     </div>
                     <div class="row g-2 mt-2">
                         <div class="div col-6 col-md-4">
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" (change)="onCheckSendMail($event.target.checked)" [checked]="this.send_mail_flag">
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Envio de correos automaticos despues de la autorización</label>
+                                <input class="form-check-input" type="checkbox"
+                                       id="flexSwitchCheckDefault"
+                                       (change)="onCheckSendMail($event)"
+                                       [checked]="formData.cfdi_send_mail == 1">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Envío de correos automáticos después de la autorización</label>
                             </div>
                         </div>
                     </div>
@@ -115,3 +135,4 @@
         </div>
     </div>
 </div>
+</with-loader>
