--- a/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
@@ -1,4 +1,4 @@
-<form class="row g-2" #clientForm='ngForm' (ngSubmit)="onSubmit()">
+<form method="post" class="row g-2" (ngSubmit)="onSubmit()">
     <label class="label-title"><span>Datos del producto</span></label>
     <div class="col-12 col-md-6">
         <label for="product_cod" class="form-label">Código / Código Barra: *</label>
@@ -23,7 +23,6 @@
         <label for="product_description" class="form-label">Descripción:</label>
         <input type="text" id="product_description" [(ngModel)]="formData.description" name="product_description" class="form-control">
     </div>
-
     <div class="col-12 col-md-6">
         <label for="product__class" class="form-label">Clase: *</label>
         <select [(ngModel)]="formData.type" name="product__class" id="product__class" class="form-select" required>
@@ -32,8 +31,6 @@
     <option value="OTRO" >Otro</option>
   </select>
     </div>
-
-
     <div class="col-12 col-md-6">
         <label for="product__iva" class="form-label">IVA: *</label>
         <select [(ngModel)]="iva" name="product__iva" id="product__iva" class="form-select" (change)="onChangeIVA($event.target.value)">
@@ -45,7 +42,7 @@
     <div class="col-12">
         <div class="row g-2">
             <div class="div col-3 col-md-3">
-                <label for="product_price" class="form-label" required>P. Costo</label>
+                <label for="product_price" class="form-label">P. Costo</label>
                 <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInputPrice($event.target.value)" (change)="onInputPrice($event.target.value)" step="any">
             </div>
             <div class="div col-3 col-md-3">
@@ -67,7 +64,7 @@
 
     <div class="col-12 text-end mt-4">
         <button type="button" class="btn btn-outline-danger me-2" data-bs-dismiss="modal">Cancelar</button>
-        <bs-button [loader]="loader" *ngIf="!edit" variant="primary"><i class="fa fa-save me-1"></i>Registrar Producto</bs-button>
-        <bs-button [loader]="loader" *ngIf="edit" variant="success"><i class="fa fa-save me-1"></i>Actualizar Producto</bs-button>
+        <bs-button [loader]="loader" *ngIf="!edit" type="submit" variant="primary"><i class="fa fa-save me-1"></i>Registrar Producto</bs-button>
+        <bs-button [loader]="loader" *ngIf="edit" type="submit" variant="success"><i class="fa fa-save me-1"></i>Actualizar Producto</bs-button>
     </div>
 </form>
