--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -8,7 +8,7 @@
 }
 
 .label-title {
-    color: $gray-400;
+    color: $card-color;
     font-weight: 500;
     position: relative;
     overflow: hidden;
@@ -21,8 +21,12 @@
         content: " ";
         width: 100%;
         height: 1px;
-        background: $gray-200;
-        display: inline-block;
+        @if $themeDark {
+          background: lighten($dark, 20);
+        } @else {
+          background: $gray-200;
+        }
+      display: inline-block;
         position: absolute;
         top: calc(50% + 2px);
     }
@@ -50,7 +54,7 @@
     border: none;
     margin-right: 10px;
     margin-left: 15px;
-    border-left: 1px solid $gray-400;
+    border-left: 1px solid $border-color;
     height: auto;
     width: 1px;
 }
