--- a/src/assets/scss/core/_forms.scss
+++ b/src/assets/scss/core/_forms.scss
@@ -1,12 +1,27 @@
 .input-group-min {
+  @include tablet {
+    margin-top: -10px;
+  }
   .form-label {
     margin-bottom: 0;
     font-size: $font-size-base - 0.2rem;
-    margin-left: 7px;
-    background: $body-bg;
-    line-height: 10px;
+    margin-left: 3px;
+    padding: 0 4px;
+    background: $card-bg;
+    line-height: 1.6px;
+    @if $themeDark {
+      color: $light;
+    } @else {
+      color: $gray-500;
+    }
+
   }
   input {
-    margin-top: -7px;
+    margin-top: -9.1px;
+  }
+  &.readonly, &.disabled {
+    .form-label {
+      background: $input-disabled-bg;
+    }
   }
 }
