--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -38,7 +38,7 @@
                 data-bs-toggle="tooltip" data-bs-placement="right">
           <i class="bi bi-file-earmark-lock"></i></button>
         <ul class="sub-item grid">
-          <li><a href="#"><i class="bi bi-receipt"></i><span>Facturas</span></a></li>
+          <li><a routerLink="/cfdi" [queryParams]="{doc: 1}"><i class="bi bi-receipt"></i><span>Facturas</span></a></li>
           <li><a href="#"><i class="bi bi-receipt"></i><span>Guias de Remision</span></a></li>
           <li><a href="#"><i class="bi bi-receipt"></i><span>Notas de Credito</span></a></li>
           <li><a href="#"><i class="bi bi-receipt"></i><span>Notas de Debito</span></a></li>
