Fix Bugs in CFD/Docs, Logout, Login, AuthService
- Logout
- Store Fig Bug
- AuthService add GetUserLogin
- Fix Bugs in CFD/Docs
- Responsive fix bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-loading-bar color="#198754" height="1.2px" [includeSpinner]="false"></ngx-loading-bar>
+<ngx-loading-bar color="#7289da" height="1.2px" [includeSpinner]="false"></ngx-loading-bar>
 <app-sidebar *ngIf="auth"></app-sidebar>
 <main>
   <app-navbar *ngIf="auth"></app-navbar>
