--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="login">
         <div class="card">
             <div class="card-body login-title">
-                <img [src]="startImageUrl" height="150px" alt="">
+                <img [src]="startImageUrl" height="90px" class="mb-2" alt="">
                 <b>Iniciar sesión</b>
             </div>
             <div class="card-body">
