--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -5,6 +5,7 @@
 @import "mixings";
 @import "utils/helpers";
 @import "~bootstrap/scss/bootstrap";
+@import "utils/colors";
 
 // components
 @import "./components/btn";
