--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
-<nav>
+<nav *ngIf="appState && appState.user">
   <div class="brand-container">
     <div class="brand">
       <button class="btn" id="btnMenu"><i class="bi-list"></i></button>
       <img src="assets/img/logo.svg" alt="Logo Empresa">
     </div>
-    <span class="page-title">{{  appName  }}</span>
+    <span class="page-title">{{  appState.module  }}</span>
   </div>
   <ul class="nav-menu" id="nav-menu">
     <li *ngFor="let m of menu" class="menu-item">
@@ -22,19 +22,19 @@
       </ul>
     </li>
   </ul>
-  <ul>
+  <ul *ngIf="appState.user">
       <li>
         <a href="#" class="profile" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false">
           <img src="https://github.com/mdo.png" alt="mdo" height="30px" class="rounded-circle">
         </a>
         <ul class="dropdown-menu text-small shadow profile-ul" aria-labelledby="dropdownUser3">
-          <li><a class="dropdown-item" href="#">New project...</a></li>
-          <li><a class="dropdown-item" href="#">Settings</a></li>
-          <li><a class="dropdown-item" href="#">Profile</a></li>
+          <li><button class="dropdown-item text-muted" disabled>@{{ appState.user.username }}</button></li>
+          <li><a class="dropdown-item" href="#">Configuraciones</a></li>
+          <li><a class="dropdown-item" href="#">Perfil</a></li>
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
+          <li><button class="dropdown-item" (click)="logout()">Cerrar Sesión</button></li>
         </ul>
       </li>
     </ul>
