--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -13,6 +13,11 @@
       tr {
         padding: 5px 0;
       }
+      tbody {
+        > tr {
+          border: none;
+        }
+      }
     }
 
     thead tr {
@@ -75,8 +80,11 @@
       }
       &.no-data {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         color: #888;
+        > div {
+          width: initial;
+        }
         &:before {
           display: none;
         }
@@ -85,9 +93,14 @@
         width: initial !important;
       }
     }
-    td.no-data {
-      color: #888;
+    td[colspan]:not([colspan="1"]) {
       text-align: center;
+      width: 100%;
+      justify-content: center;
+      padding: 10px 0;
+      &::before {
+        display: none;
+      }
     }
   }
 }
